trying to fix mobile url bar jump

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -88,7 +88,7 @@ ul {
 		color: white !important;
 		border-width: 0 !important;
 		background-attachment: fixed;
-		background-size: auto 100vh;
+		background-size: auto 600px;
 		transition: background 0.3s ease-in-out;
 	}
 
